# blinkontroller

./: REST-Project-1-soapui-project.xml  partitions.csv  sdkconfig.defaults
front/web/site/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
